fix spacing options" git push

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ h1 {
 .option {
   display: flex;
   flex-direction: column;
-  justify-content:space-around;
+  justify-content:space-between;
   margin-left: 10vw;
   margin-right: 10vw;
 }
